@@ -5,6 +5,7 @@ Updated the build scripts to use Ivy dependency management.
 Added mutable entity support.
 Added writeable dataset support.
 Added apidb tasks that support both mysql and postgresql api databases.
+Added a new --append-change task for combining full history changesets.
 
 0.30
 Added 0.6 support.
